# libAwesomeMC

./: .gitattributes  .gitignore  AwesomeMC-config.cmake  CMakeLists.txt  CMakePresets.json  LICENSE  readme.md  version.h.in  version.hpp.in
example/: CMakeLists.txt  example1.cpp  example_anvil.cpp  example_nbt.cpp  load_testmap.cpp
include/: test.h
include/AwesomeMC/: constants.hpp  global.hpp
include/AwesomeMC/anvil/: anvil_read.hpp  block.hpp  chunk.hpp  chunk_info.hpp  constants.hpp  heightmap.hpp  region.hpp  region_header.hpp
include/AwesomeMC/nbt/: nbt_print.hpp  nbt_read.hpp  nbt_write.hpp
include/AwesomeMC/nbt/tags/: abstract_tag.hpp  abstract_vector_tag.hpp  array_tag.hpp  byte_array_tag.hpp  byte_tag.hpp  compound_tag.hpp  double_tag.hpp  end_tag.hpp  float_tag.hpp  int_array_tag.hpp  int_tag.hpp  list_tag.hpp  long_array_tag.hpp  long_tag.hpp  number_tag.hpp  short_tag.hpp  string_tag.hpp  tag_type.hpp  tags.hpp  value_tag.hpp
include/AwesomeMC/util/: bit.hpp  byte_stream.hpp  byte_swap.hpp  compression.hpp  conversion.hpp  floating_point.hpp  indent.hpp  traits.hpp
include/anvil/: anvil_read.hpp  block.hpp  chunk.hpp  chunk_info.hpp  chunk_tag.hpp  constants.hpp  region.hpp  region_header.hpp
include/nbt/: abstract_tag.hpp  byte_array_tag.hpp  byte_tag.hpp  compound_tag.hpp  double_tag.hpp  end_tag.hpp  float_tag.hpp  int_array_tag.hpp  int_tag.hpp  list_tag.hpp  long_array_tag.hpp  long_tag.hpp  nbt_print.hpp  nbt_read.hpp  nbt_reader.hpp  short_tag.hpp  string_tag.hpp  tags.hpp
include/nbt/tags/: abstract_tag.hpp  byte_array_tag.hpp  byte_tag.hpp  compound_tag.hpp  double_tag.hpp  end_tag.hpp  float_tag.hpp  int_array_tag.hpp  int_tag.hpp  list_tag.hpp  long_array_tag.hpp  long_tag.hpp  short_tag.hpp  string_tag.hpp  tags.hpp
include/util/: byte_stream.hpp  byte_swap.hpp  compression.hpp  conversion.hpp
src/: CMakeLists.txt  test.cpp
src/anvil/: anvil_read.cpp  block.cpp  chunk.cpp  chunk_info.cpp  chunk_tag.cpp  heightmap.cpp  region.cpp  region_header.cpp
src/nbt/: abstract_tag.cpp  byte_array_tag.cpp  byte_tag.cpp  compound_tag.cpp  double_tag.cpp  end_tag.cpp  float_tag.cpp  int_array_tag.cpp  int_tag.cpp  list_tag.cpp  long_array_tag.cpp  long_tag.cpp  nbt_print.cpp  nbt_read.cpp  nbt_reader.cpp  nbt_write.cpp  short_tag.cpp  string_tag.cpp
src/nbt/tags/: abstract_tag.cpp  abstract_vector_tag.cpp  byte_array_tag.cpp  byte_tag.cpp  compound_tag.cpp  double_tag.cpp  end_tag.cpp  float_tag.cpp  int_array_tag.cpp  int_tag.cpp  list_tag.cpp  long_array_tag.cpp  long_tag.cpp  short_tag.cpp  string_tag.cpp  tag_type.cpp
src/util/: bit.cpp  byte_stream.cpp  compression.cpp  conversion.cpp  indent.cpp
test/: CMakeLists.txt  output.hpp  types_test.cpp
test/anvil/: block_test.cpp  chunk_info_test.cpp  chunk_test.cpp  heightmap_test.cpp  region_header_test.cpp  region_test.cpp
test/nbt/: abstract_tag_test.cpp  byte_array_tag_test.cpp  byte_tag_test.cpp  compound_tag_test.cpp  double_tag_test.cpp  end_tag_test.cpp  float_tag_test.cpp  int_array_tag_test.cpp  int_tag_test.cpp  list_tag_test.cpp  long_array_tag_test.cpp  long_tag_test.cpp  nbt_read_test.cpp  nbt_write_test.cpp  short_tag_test.cpp  string_tag_test.cpp
test/nbt/tags/: abstract_tag_test.cpp  byte_array_tag_test.cpp  byte_tag_test.cpp  compound_tag_test.cpp  double_tag_test.cpp  end_tag_test.cpp  float_tag_test.cpp  int_array_tag_test.cpp  int_tag_test.cpp  list_tag_test.cpp  long_array_tag_test.cpp  long_tag_test.cpp  short_tag_test.cpp  string_tag_test.cpp  tag_type_test.cpp
test/testdata/world/libAwesomeMC_TestWorld_1_18_1/region/: r.-1.-1.mca
test/util/: bit_test.cpp  byte_stream_test.cpp  byte_swap_test.cpp  compression_test.cpp  conversion_test.cpp  floating_point_test.cpp
